--- a/index_config.json
+++ b/index_config.json
@@ -26,7 +26,7 @@
     "proxies": [
         {
             "prefix": "/imlazy/",
-            "aliases": ["/cdn.imlazy.ink/img/background/", "/https://cdn.imlazy.ink/img/background/"],
+            "aliases": ["/cdn.imlazy.ink:233/img/background/", "/https://cdn.imlazy.ink:233/img/background/"],
             "target": "https://cdn.imlazy.ink:233/img/background/",
             "rawRedirect": "https://cdn.imlazy.ink:233/img/background/{path}",
             "description": "个人图床服务(非本人图床，仅作反代并缓存)",
