--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@types/node": "^24.0.3",
     "@vercel/node": "^5.2.2",
-    "express": "^4.18.2", 
+    "dns-packet": "^5.6.1",
+    "dns-socket": "^4.2.2",
+    "express": "^4.18.2",
     "https-proxy-agent": "^7.0.6",
     "node-fetch": "^2.7.0"
   },
