添加流式传输

--- a/index_config.json
+++ b/index_config.json
@@ -22,6 +22,9 @@
         "diskPath": ".cache",
         "imageTypes": ["png", "jpg", "jpeg", "gif", "svg", "webp", "bmp", "ico"]
     },
+    "streaming": {
+        "enabled": true
+    },
     "httpProxy": {
         "enabled": false,
         "address": "127.0.0.1",
